--- a/index.css
+++ b/index.css
@@ -27,6 +27,8 @@ header {
     width: 100%;
     display: grid;
     grid-template-columns: auto auto auto;
+    border-bottom-style: solid;
+    border-bottom-color: white;
 }
 
 header h1 {
@@ -34,4 +36,44 @@ header h1 {
     font-family: "Source Code Pro", sans-serif;
     color: white;
     text-align: center;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 32px;
+    background-color: navy;
+    border-radius: 16px;
+    border-style: solid;
+    border-color: darkblue;
+    width: 50%;
+    margin: auto;
+    margin-top: 32px;
+    height: 64px;
+    align-content: center;
+    justify-content: center;
+}
+
+.navlogo {
+    width: 48px;
+    height: 48px;
+    margin: 8px;
+    float: left;
+}
+
+.navtext {
+    color: white;
+    font-family: "Source Code Pro", sans-serif;
+    font-size: 20px;
+    float: left;
+    margin-right: 6px;
+}
+
+.navdiv {
+    background-color: navy;
+    border-radius: 16px;
+}
+
+.navdiv:hover {
+    background-color: rebeccapurple;
 }
