--- a/index.css
+++ b/index.css
@@ -85,7 +85,8 @@ nav {
 
 .published {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 64px;
     width: 100%;
     justify-content: center;
     align-content: center;
@@ -127,6 +128,7 @@ nav {
 
 .pubimage {
     width: inherit;
+    height: 242px;
     border-radius: 16px;
     border-bottom-style: solid;
     border-color: white;
