--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 body {
-    background-image: url("../imgs/background.jpeg");
+    background-image: url("./imgs/background.jpeg");
     
     padding: 64px;
     
@@ -15,7 +15,7 @@ body {
 #logo {
     width: 512px;
     height: 196px;
-    background-image: url("../imgs/westdevlogo.png");
+    background-image: url("./imgs/westdevlogo.png");
     background-size: cover;
     border-radius: 64px;
     border-color: white;
