--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ header h1 {
 
 nav {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto;
     grid-column-gap: 32px;
     background-color: navy;
     border-radius: 16px;
