--- a/chatroom.css
+++ b/chatroom.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 .post-container {
     width: 100%;
-    max-width: 300px;
+    max-width: 500px;
     margin: 20px auto;
     border: 2px solid #ffffff;
     border-radius: 10px;
@@ -57,6 +59,12 @@ table {
     border-radius: 8px;
     border-bottom-style: solid;
     border-color: white;
+}
+
+#all-posts {
+    overflow-y: auto;
+    height: 500px;
+    font-family: "Source Code Pro", sans-serif;
 }
 
 #temp {
