--- a/index.css
+++ b/index.css
@@ -34,8 +34,6 @@ body {
 
 header {
     width: 100%;
-    display: grid;
-    grid-template-columns: auto auto auto;
     border-bottom-style: solid;
     border-bottom-color: white;
 }
@@ -59,6 +57,32 @@ header h1 {
 
 #welcometext {
     float: left;
+}
+
+#profile {
+    font-size: 48px;
+    font-family: "Source Code Pro", sans-serif;
+    color: white;
+    text-align: center;
+    width: auto;
+    height: 200px;
+    margin: auto;
+    float: left;
+}
+
+#prof-div {
+    width: 96px;
+    height: 96px;
+    background-color: white;
+    border-radius: 64px;
+    overflow: hidden;
+    float: left;
+    margin-top: 32px;
+}
+
+#profile-text {
+    float: left;
+    margin-left: 32px;
 }
 
 nav {
