--- a/chatroom.css
+++ b/chatroom.css
@@ -63,7 +63,7 @@ table {
 
 #all-posts {
     overflow-y: auto;
-    height: 500px;
+    height: 750px;
     font-family: "Source Code Pro", sans-serif;
 }
 
@@ -80,6 +80,12 @@ table {
     padding: 8px 15px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.delete-post {
+    width: 16px;
+    height: 16px;
+    margin-left: 95%;
 }
 
 #send-btn:hover {
